# bublik-e2e

./: .gitignore  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
src/: cli.py
src/core/: __init__.py  bundle.py  common.py  constants.py  discovery.py  fixture_api.py  importer.py  manifest.py  planning.py  settings.py  summary.py  synthetic_fixture.py
src/fixtures/: __init__.py
src/fixtures/basic/: fixture.py
src/fixtures/basic/assets/: example_converter.py
src/fixtures/dpdk/: fixture.py  real_data.py
src/fixtures/net_drv/: fixture.py  real_data.py
tests/: test_cli.py  test_importer.py  test_planning.py  test_settings.py
tools/: gen_real_data.py
